# game-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run.py
.devcontainer/: devcontainer.json
app/: __init__.py
app/api/v1/: __init__.py  customize_game.py  generate_game.py
app/schema/: customize_game.schema.json  generate_game.schema.json
app/usecases/: __init__.py  customize_game.py  generate_game.py
lib/: __init__.py  techiecrews.py  workspaces.py
lib/essential-crew/html5_crew/: agents.yml  crews.yml  tasks.yml
